# lazy-crypto

./: CMakeLists.txt  Makefile  README.md  aes_block_cipher.cpp  common_utils.h  gen_test_vectors.py  test.cpp
pka/: arith.cpp  arith.h  test.cpp
src/: CMakeLists.txt  common_utils.cpp
src/include/: aes_block_cipher.h  common_utils.h
test/: CMakeLists.txt  aes_test.cpp  aes_test_vectors.yml  arith_test.cpp  bigint_test_vectors.yml  gen_aes_test_vectors.py
